--- a/app/src/main/res/menu/menu_client_detail.xml
+++ b/app/src/main/res/menu/menu_client_detail.xml
@@ -2,6 +2,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="br.com.douglas.flat.view.activity.ClientDetailActivity">
-    <item android:id="@+id/action_settings" android:title="@string/action_settings"
+    <item android:id="@+id/action_edit" android:title="@string/action_edit"
+        android:orderInCategory="100" app:showAsAction="never" />
+    <item android:id="@+id/action_delete" android:title="@string/action_delete"
         android:orderInCategory="100" app:showAsAction="never" />
 </menu>
