--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -8,11 +8,6 @@
 
     <TextView android:id="@+id/section_label" android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Testando"/>
-    <Button
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:text="Add"
-        android:id="@+id/addClient"/>
+        android:text="Bem vindo"/>
 
 </LinearLayout>
