--- a/app/src/main/res/layout/activity_client.xml
+++ b/app/src/main/res/layout/activity_client.xml
@@ -17,20 +17,17 @@
         android:layout_alignParentStart="true"
         android:hint="@string/name"/>
 
-
-    <EditText
+    <LinearLayout
+        android:id="@+id/layout_edt_contact"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/edtPhone"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"
-        android:hint="@string/phone"/>
+        android:orientation="vertical">
 
-    <EditText
+    </LinearLayout>
+
+    <Button
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/edtAddress"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"
-        android:hint="@string/address"/>
+        android:id="@+id/btn_add_contact"
+        android:text="Adicionar contato"/>
 </LinearLayout>
