--- a/app/src/main/res/layout/activity_sale.xml
+++ b/app/src/main/res/layout/activity_sale.xml
@@ -4,29 +4,69 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="br.com.douglas.flat.SaleActivity"
+    tools:context="br.com.douglas.flat.view.activity.SaleActivity"
     android:orientation="vertical">
 
-    <EditText
-        android:layout_width="fill_parent"
+    <LinearLayout
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:hint="Cliente"
-        android:id="@+id/edt_client"
-        android:enabled="false"/>
+        android:orientation="horizontal">
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:id="@+id/description_layout">
+            <TextView android:text="Cliente: "
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingTop="@dimen/activity_vertical_margin"
+                android:textSize="20sp"/>
 
-    <EditText
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:hint="Data"
-        android:id="@+id/edt_date"
-        android:enabled="false"/>
+            <TextView android:text="Data: "
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingTop="@dimen/activity_vertical_margin"
+                android:textSize="20sp"/>
 
-    <EditText
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:hint="Total"
-        android:id="@+id/edt_total"
-        android:enabled="false"/>
+            <TextView android:text="Total: "
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingTop="@dimen/activity_vertical_margin"
+                android:textSize="20sp"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_marginLeft="10dp"
+            android:id="@+id/values_layout">
+            <TextView
+                android:id="@+id/txt_name"
+                android:textSize="20sp"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:paddingTop="@dimen/activity_vertical_margin"
+                android:text="Nome do Cliente"/>
+
+            <TextView
+                android:id="@+id/txt_date"
+                android:textSize="20sp"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:paddingTop="@dimen/activity_vertical_margin"
+                android:text="Data da Venda"/>
+
+            <TextView
+                android:id="@+id/txt_total"
+                android:textSize="20sp"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:paddingTop="@dimen/activity_vertical_margin"
+                android:paddingBottom="@dimen/activity_vertical_margin"
+                android:text="Total"/>
+        </LinearLayout>
+    </LinearLayout>
 
     <View
         android:layout_width="fill_parent"
