--- a/app/src/main/res/layout/activity_sale.xml
+++ b/app/src/main/res/layout/activity_sale.xml
@@ -1,10 +1,15 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
+    android:layout_height="fill_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="br.com.douglas.flat.view.activity.SaleActivity"
+    android:orientation="vertical">
+
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools" android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
     android:orientation="vertical">
 
     <LinearLayout
@@ -19,19 +24,18 @@
             <TextView android:text="Cliente: "
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:paddingTop="@dimen/activity_vertical_margin"
                 android:textSize="20sp"/>
 
             <TextView android:text="Data: "
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:paddingTop="@dimen/activity_vertical_margin"
+                android:paddingTop="10dp"
                 android:textSize="20sp"/>
 
             <TextView android:text="Total: "
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:paddingTop="@dimen/activity_vertical_margin"
+                android:paddingTop="10dp"
                 android:textSize="20sp"/>
         </LinearLayout>
 
@@ -46,7 +50,6 @@
                 android:textSize="20sp"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:paddingTop="@dimen/activity_vertical_margin"
                 android:text="Nome do Cliente"/>
 
             <TextView
@@ -54,7 +57,7 @@
                 android:textSize="20sp"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:paddingTop="@dimen/activity_vertical_margin"
+                android:paddingTop="10dp"
                 android:text="Data da Venda"/>
 
             <TextView
@@ -62,7 +65,7 @@
                 android:textSize="20sp"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:paddingTop="@dimen/activity_vertical_margin"
+                android:paddingTop="10dp"
                 android:paddingBottom="@dimen/activity_vertical_margin"
                 android:text="Total"/>
         </LinearLayout>
@@ -76,66 +79,16 @@
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:id="@+id/layout_itens"
+        android:layout_marginTop="15dp"
         android:orientation="vertical">
-
-        <EditText
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:paddingTop="@dimen/activity_vertical_margin"
-            android:hint="Produto"/>
-        <LinearLayout
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-            <EditText
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:hint="Quantidade"
-                android:layout_weight="1"/>
-
-            <EditText
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:hint="Subtotal"
-                android:layout_weight="1"/>
-            <Button
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1.5"
-                android:text="X"/>
-        </LinearLayout>
-
-        <EditText
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:paddingTop="@dimen/activity_vertical_margin"
-            android:hint="Produto"/>
-        <LinearLayout
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal">
-            <EditText
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:hint="Quantidade"
-                android:layout_weight="1"/>
-
-            <EditText
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:hint="Subtotal"
-                android:layout_weight="1"/>
-            <Button
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1.5"
-                android:text="X"/>
-        </LinearLayout>
 
     </LinearLayout>
     <Button
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/fab_size"
-        android:text="Adicionar Item"/>
+        android:text="Adicionar Item"
+        android:id="@+id/btn_add_item"/>
 </LinearLayout>
+</ScrollView>
