--- a/app/src/main/res/layout/activity_sale.xml
+++ b/app/src/main/res/layout/activity_sale.xml
@@ -87,7 +87,7 @@
     <Button
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/fab_size"
+        android:layout_marginTop="10sp"
         android:text="Adicionar Item"
         android:id="@+id/btn_add_item"/>
 </LinearLayout>
