--- a/app/src/main/res/layout/sale_adapter.xml
+++ b/app/src/main/res/layout/sale_adapter.xml
@@ -1,31 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_height="wrap_content" android:orientation="vertical"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_height="wrap_content" android:orientation="horizontal"
     android:layout_width="fill_parent">
 
-    <TableRow android:layout_height="wrap_content"
-        android:layout_width="fill_parent">
+    <LinearLayout android:layout_height="wrap_content"
+        android:layout_width="fill_parent"
+        android:layout_weight="3"
+        android:orientation="vertical">
+
+        <TextView
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="Cliente"
+            android:textStyle="bold"
+            android:gravity="center"
+            android:layout_weight="1"
+            android:textSize="30dp"
+            android:id="@+id/txt_client"
+            android:typeface="monospace"/>
 
         <TextView
             android:id="@+id/categoryId"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
             android:text="02/04/2015"
-            android:textStyle="bold"
-            android:gravity="left"
-            android:layout_weight="1"
-            android:typeface="monospace"
-            android:height="50sp"
-            android:textSize="30dp"/>
+            android:gravity="center"
+            android:typeface="monospace"/>
+    </LinearLayout>
 
-        <TextView android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
+    <LinearLayout android:layout_height="fill_parent"
+        android:layout_width="fill_parent"
+        android:layout_weight="9">
+
+        <TextView android:layout_height="fill_parent"
+            android:layout_width="fill_parent"
             android:layout_weight="1"
-            android:gravity="right"
+            android:gravity="center"
             android:id="@+id/description"
             android:text="R$ 10,00"
             android:height="35sp"
             android:textSize="20dp"/>
-    </TableRow>
+    </LinearLayout>
 
-</TableLayout>
+</LinearLayout>
