--- a/app/src/main/res/values/refs.xml
+++ b/app/src/main/res/values/refs.xml
@@ -1,3 +1,4 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
 
     <!--
@@ -8,5 +9,6 @@
     http://developer.android.com/training/multiscreen/screensizes.html#TaskUseAliasFilters
     -->
     <item name="fragment_client" type="layout">@layout/fragment_client_list</item>
+    <item name="fragment_saleitem" type="layout">@layout/fragment_saleitem_list</item>
 
 </resources>
