--- a/app/src/main/res/layout/activity_client_detail.xml
+++ b/app/src/main/res/layout/activity_client_detail.xml
@@ -80,6 +80,12 @@
             android:layout_height="wrap_content"
             android:id="@+id/btn_display_sales"
             android:text="Visualizar Vendas"/>
+
+        <Button
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/btn_create_payment"
+            android:text="Criar Pagamento1"/>
     </LinearLayout>
 
 </LinearLayout>
