--- a/app/src/main/res/layout/fragment_sale_detail.xml
+++ b/app/src/main/res/layout/fragment_sale_detail.xml
@@ -1,6 +1,6 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" tools:context="br.com.douglas.flat.SaleDetailFragment"
+    android:layout_height="match_parent" tools:context="br.com.douglas.flat.view.fragments.SaleDetailFragment"
     android:orientation="vertical">
 
     <LinearLayout
