--- a/app/src/main/res/layout/fragment_payment_list.xml
+++ b/app/src/main/res/layout/fragment_payment_list.xml
@@ -1,6 +1,6 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" tools:context="br.com.douglas.flat.PaymentListFragment">
+    android:layout_height="match_parent" tools:context="br.com.douglas.flat.view.fragments.PaymentListFragment">
 
     <ListView android:id="@android:id/list" android:layout_width="match_parent"
         android:layout_height="match_parent" />
