--- a/app/src/main/res/layout/fragment_produtct_list.xml
+++ b/app/src/main/res/layout/fragment_produtct_list.xml
@@ -8,4 +8,24 @@
     <TextView android:id="@android:id/empty" android:layout_width="match_parent"
         android:layout_height="match_parent" android:gravity="center" />
 
+    <RelativeLayout
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent">
+
+        <Button
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="56dp"
+            android:layout_height="56dp"
+            android:textSize="40sp"
+            android:background="@drawable/ic_plus"
+            android:id="@+id/fabbutton"
+            android:elevation="3dp"
+            android:paddingBottom="16dp"
+            android:fontFamily="sans-serif-light"
+            android:layout_gravity="right|bottom"
+            android:layout_marginBottom="40dp"
+            android:layout_marginEnd="40dp"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentEnd="true" />
+    </RelativeLayout>
 </FrameLayout>
